<resources>
    <string name="app_name">EnterpriseStatistic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="dialog_title_error">Lỗi</string>
    <string name="dialog_content_server_problem">Server đang tạm thời bị lỗi, bạn thử lại sau.</string>
    <string name="dialog_title_common">Thông báo</string>
    <string name="dialog_title_content_network_problem">Không có kết nối mạng</string>

    <!--String related to home main-->
    <string name="prompt_search">Search</string>
    <string name="prompt_number_sample">100</string>
    <string name="prompt_enterprises">enterprises</string>
    <string name="prompt_total_customers">Total customers</string>
    <string name="prompt_number_of_enterprises">Number of enterprises:</string>
    <string name="prompt_active_customers">Active customers</string>
    <string name="prompt_number_of_staffs">Number of staffs:</string>
    <string name="prompt_number_of_customers">Number of customers</string>
    <string name="prompt_total_online_time">Total online time</string>
    <string name="prompt_total_online_time_hours">Total online time (hours):</string>

    <!--String related to Online Enterprises-->
    <string name="online_enterprises">Online Enterprises</string>

    <!--string related to edit info-->
    <string name="title">Title:</string>
    <string name="first">First*:</string>
    <string name="middle">Middle:</string>
    <string name="last">Last*:</string>
    <string name="suffix">Suffix:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="country">Country:</string>
    <string name="street">Stree:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="store_name">Store name</string>
    <string name="store_address">Store address</string>
    <string name="welcome_greeting">Welcome to Enterprise Network</string>
    <string name="email_sample">dangquanuet@gmail.com</string>
    <string name="welcome_guide">Navigating Around the Enterprise Network</string>
    <string name="welcome_guide_2">Tap the icon on the button right corner\nto select a working module.</string>
    <string name="switch_account">switch Account</string>
</resources>
