<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/home_search_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_500">

        <EditText
            android:id="@+id/home_search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/prompt_search"
            android:maxLines="1"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/home_total_enterprise_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_search_rl">

        <TextView
            android:id="@+id/home_total_enterprises_number_tv"
            android:layout_width="@dimen/number_textview_width"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/home_total_enterprise_tv"
            android:text="@string/prompt_number_sample"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/home_total_enterprise_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/prompt_enterprises"
            android:textColor="@color/blue" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/home_refresh_bt"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_refresh_black_24dp" />

        <Button
            android:id="@+id/home_centre_bt"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_people_black_24dp" />

        <Button
            android:id="@+id/home_right_bt"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_apps_black_24dp" />
    </RelativeLayout>
</RelativeLayout>